--- a/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
@@ -304,14 +304,18 @@
 								table.render(option);
 							},
 							reloadData:function(params){
-
-                                if(params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
-                                {
-                                    $.extend(params.where,{
-                                        sidx:"csmId",
-                                        sord:"desc"
-                                    })
-                                }
+                if(typeof(params) === 'undefined' || typeof(params.where) === 'undefined'){
+                  params = $.extend(params,{where:{
+                    sidx:"csmId",
+                    sord:"desc"
+                  }})
+                }else if( params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
+                {
+                  params=$.extend(params.where,{
+                    sidx:"csmId",
+                    sord:"desc"
+                  })
+                }
 								table.reload(tableId, params);
 							},
 							getSelectIds:function(){
