--- a/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machineLimited/index_list2.html
@@ -74,7 +74,7 @@
 </div>
 
 <script type="text/javascript">
-    var currPage=1;
+    var currPage=1,currSize=15;
 
 	var operate = {
 		getGrid:function(){
@@ -90,10 +90,10 @@
 			grid.reloadData({where:getFormData(this.getQueryForm())});
 		},
         exportData:function(){
-            console.log("exportData")
-
-            window.open(getServUrl("/admin/machine/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
-        },
+            var params = $.extend(getFormData(this.getQueryForm()),{rows:currSize,page:currPage});
+            params = transferParamsWithSortExport(params,"csmId");
+            window.open(getServUrl("/admin/machineLimited/report")+"?"+jsonToUri(params));
+            },
 		add:function(){
 			var o = this;
 			showTopWin({
@@ -214,6 +214,7 @@
 			  cols:  [clms],
 			  done: function(res, curr, count){
                   currPage = curr;
+                  currSize=res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
@@ -257,7 +258,7 @@
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
 		$(".layui-table-view").remove();
-        option.where = getFormData(operate.getQueryForm());
+
 		grid.render(option);
 	});
 
@@ -299,25 +300,22 @@
 					    	}
 					  });
 
-					  grid = {
-							render:function(option){
-								table.render(option);
-							},
-							reloadData:function(params){
-                if(typeof(params) === 'undefined' || typeof(params.where) === 'undefined'){
-                  params = $.extend(params,{where:{
-                    sidx:"csmId",
-                    sord:"desc"
-                  }})
-                }else if( params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
-                {
-                  params.where=$.extend(params.where,{
-                    sidx:"csmId",
-                    sord:"desc"
-                  })
-                }
-								table.reload(tableId, params);
-							},
+					  grid = {render: function (option) {
+                          if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                              option.where = getFormData(operate.getQueryForm());
+                          } else {
+                              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                          }
+                          table.render(transferParamsWithSort(option, "csmId"));
+                      },
+                          reloadData: function (params) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.reload(tableId, transferParamsWithSort(params, "csmId"));
+                          },
 							getSelectIds:function(){
 								var ids = [];
 								var checkStatus = table.checkStatus(tableId), data = checkStatus.data;
