--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
@@ -72,7 +72,7 @@
 	</div>
 
 <script type="text/javascript">
-    var currPage=1;
+    var currPage=1,currSize=15;
 
 	var operate = {
 		getGrid:function(){
@@ -88,9 +88,9 @@
 			grid.reloadData({where:getFormData(this.getQueryForm())});
 		},
         exportData:function(){
-            console.log("exportData")
-
-            window.open(getServUrl("/admin/vehicle/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
+            var params = $.extend(getFormData(this.getQueryForm()),{rows:currSize,page:currPage});
+            params = transferParamsWithSortExport(params,"csvId");
+            window.open(getServUrl("/admin/vehicle/report")+"?"+jsonToUri(params));
         },
 		bind:function(e){
 			var o = this;
@@ -229,6 +229,7 @@
 			  cols:  [clms],
 			  done: function(res, curr, count){
                   currPage = curr;
+                  currSize=res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
@@ -272,7 +273,6 @@
 	$(window).resize(function(){
 		option["height"] = getTableHeight();
 		$(".layui-table-view").remove();
-        option.where = getFormData(operate.getQueryForm());
 		grid.render(option);
 	});
 
@@ -316,24 +316,22 @@
 					  });
 
 					  grid = {
-							render:function(option){
-								table.render(option);
-							},
-							reloadData:function(params){
-                if(typeof(params) === 'undefined' || typeof(params.where) === 'undefined'){
-                  params = $.extend(params,{where:{
-                    sidx:"csvId",
-                    sord:"desc"
-                  }})
-                }else if( params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
-                {
-                  params.where=$.extend(params.where,{
-                    sidx:"csvId",
-                    sord:"desc"
-                  })
-                }
-								table.reload(tableId, params);
-							},
+					      render: function (option) {
+                          if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                              option.where = getFormData(operate.getQueryForm());
+                          } else {
+                              option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                          }
+                          table.render(transferParamsWithSort(option, "csvId"));
+                      },
+                          reloadData: function (params) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.reload(tableId, transferParamsWithSort(params, "csvId"));
+                          },
 							getSelectIds:function(){
 								var ids = [];
 								var checkStatus = table.checkStatus(tableId), data = checkStatus.data;
