--- a/vc-web/vc-web-front/src/main/resources/public/monitor/historyCan/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/historyCan/index_list2.html
@@ -193,13 +193,23 @@
 					    	}
 					  });
 
-					  grid = {
-							render:function(option){
-								table.render(option);
-							},
-							reloadData:function(params){
-								table.reload(tableId, params);
-							},
+					  grid =  {
+                          render: function (option) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.render(transferParamsWithSort(option, "currentTime"));
+                          },
+                          reloadData: function (params) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.reload(tableId, transferParamsWithSort(params, "currentTime"));
+                          },
 							getSelectIds:function(){
 								var ids = [];
 								var checkStatus = table.checkStatus(tableId), data = checkStatus.data;
