--- a/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/state/index_list2.html
@@ -82,7 +82,7 @@
 </div>
 
 <script type="text/javascript">
-    var currPage=1;
+    var currPage=1,currSize=15;
 	var operate = {
 		getGrid:function(){
 			return grid;
@@ -98,10 +98,10 @@
 		},
 
         exportData:function(){
-            console.log("exportData")
-
-            window.open(getServUrl("/monitor/state/report")+"?"+jsonToUri($.extend(getFormData(this.getQueryForm()),{rows:option.limit,page:currPage})));
-        },
+            var params = $.extend(getFormData(this.getQueryForm()),{rows:currSize,page:currPage});
+            params = transferParamsWithSortExport(params,"cssId");
+            window.open(getServUrl("/monitor/state/report")+"?"+jsonToUri(params));
+            },
 		
 		batchDel:function(){
 			var o = this;
@@ -189,6 +189,7 @@
 			  cols:  [clms],
 			  done: function(res, curr, count){
                   currPage = curr;
+                  currSize=res.page.size;
 			  },
       	  	  response: {
 	      		  statusName: "code",
@@ -273,25 +274,23 @@
 					    	}
 					  });
 
-					  grid = {
-							render:function(option){
-								table.render(option);
-							},
-							reloadData:function(params){
-                if(typeof(params) === 'undefined' || typeof(params.where) === 'undefined'){
-                  params = $.extend(params,{where:{
-                    sidx:"cssId",
-                    sord:"desc"
-                  }})
-                }else if( params.where.sidx === null || typeof(params.where.sidx) === 'undefined' ||params.where.sord === null || typeof(params.where.sord) === 'undefined')
-                {
-                  params.where=$.extend(params.where,{
-                    sidx:"cssId",
-                    sord:"desc"
-                  })
-                }
-								table.reload(tableId, params);
-							},
+					  grid =  {
+                          render: function (option) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.render(transferParamsWithSort(option, "cssId"));
+                          },
+                          reloadData: function (params) {
+                              if (typeof(option.where) === 'undefined' || typeof(option.where) === 'undefined') {
+                                  option.where = getFormData(operate.getQueryForm());
+                              } else {
+                                  option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
+                              }
+                              table.reload(tableId, transferParamsWithSort(params, "cssId"));
+                          },
 							getSelectIds:function(){
 								var ids = [];
 								var checkStatus = table.checkStatus(tableId), data = checkStatus.data;
