--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/index_list2.html
@@ -161,7 +161,7 @@
 				  shade: 0.4,
 				  maxmin: true,
 				  area: ['770px', '580px'],
-				  content: "/admin/vehicleLimited/detail.html?id="+id,
+				  content: "/admin/vehicle/detail.html?id="+id,
 				  zIndex: layer.zIndex //重点1
 			});
 		}
