修复查询匹配 的bug

--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_query.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_query.html
@@ -15,7 +15,7 @@
 <dl cond="csVin" >
 				<dt>车辆VIN码</dt>
 				<dd  >
-					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/query">
+					<input  name="csVinEquals" placeholder="请输入关键字" class="form-control searchinput"  dataWhere=""  dataUrl="/admin/vehicle/search">
 				</dd>
 			</dl>
 <dl cond="csNumber" >
