--- a/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/machine/index_list2.html
@@ -134,7 +134,19 @@
             console.log("exportData")
             var params = $.extend(getFormData(this.getQueryForm()), {rows: currSize, page: currPage});
             params = transferParamsWithSortExport(params, "csmId");
-            window.open(getServUrl("/admin/machine/report") + "?" + jsonToUri(params));
+            $.ajax({
+                //提交数据的类型 POST GET
+                type:"POST",
+                //提交的网址
+                url:getServUrl("/admin/machine/report") + "?" + jsonToUri(params)+jsonArrayToUri(clms,"clms"),
+                //提交的数据
+                //data:{},
+                //成功返回之后调用的函数
+                success:function(data){
+                    console.log(data)
+                }
+            });
+
         },
         add: function () {
             var o = this;
