--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index.html
@@ -18,7 +18,7 @@
 	<body style="overflow: hidden;">
 		<div class="queryForm_wrapper"></div>
 		<div class="jqGrid_wrapper jqgrid_div"></div>
-		
+
 		<script src="/js/jquery.min.js?v=2.1.4"></script>
 		<script src="/js/bootstrap.min.js?v=3.3.5"></script>
 		<script src="/js/plugins/jquery-ui/jquery-ui.min.js"></script>
@@ -32,7 +32,7 @@
 		<script src="/js/plugins/jqgrid/i18n/grid.locale-cn.js"></script>
 		<script src="/js/plugins/jqgrid/jquery.jqGrid.min.js"></script>
 		<script src="/layui/layui.all.js?t=1510164124207"></script>
-		
+
 		<script type="text/javascript">
 			$(document).ready(function () {
 		        $(".queryForm_wrapper").load("/monitor/analysis/quota/index_query.html");
@@ -40,4 +40,26 @@
 			});
 		</script>
 	</body>
+
+	<div id="exportWrapper" class="modal-body hidden">
+			<div class="row">
+				<div class="col-xs-12">
+					<div class="progress active">
+						<div id="progressbar" class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
+							<span class="sr-only">0% Complete (success)</span>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row export-running">
+				<div class="col-xs-12">
+					正在执行数据导出任务
+				</div>
+			</div>
+			<div class="row  export-result hidden">
+				<div class="col-xs-12">
+					<span id="downloadUrl">Excel文件已经导出，<a target="_blank" class="btn btn-primary"><i class="fa fa-download"></i>点击下载文件</a></span>
+				</div>
+			</div>
+	</div>
 </html>
