--- a/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/monitor/analysis/quota/index_list2.html
@@ -87,11 +87,11 @@
     },
 
     exportData: function () {
-      var params = $.extend(getFormData(this.getQueryForm()),
-          {rows: currSize, page: currPage, isAllReport: 1});
+      var params = {rows: currSize, page: currPage, allReport: 1};
       params = transferParamsWithSortExport(params, "createTime");
       var clmsCopy = $.extend(true, [], clms);
       params.clms = clmsCopy.splice(1, clms.length);
+      params.query = getFormData(this.getQueryForm());
       console.log(JSON.stringify(params));
 
       var myVar;
@@ -101,37 +101,63 @@
             if (r.success) {
               console.log(JSON.stringify(r));
 
-              myVar = setTimeout(function () {
-                ajaxRequest(getServUrl("/monitor/analysis/quota/fileUrl"), "GET",
-                    {fileUuid: r.value}, function (result) {
-                      if (result.success) {
-                        console.log(JSON.stringify(result));
-                        $('.export-result').removeClass("hidden");
-                        $('.export-running').addClass("hidden");
-                        $('#downloadUrl .btn').attr('href', result.value);
-                      }
-                    }, false);
-              }, 3000);
-
-              $('#exportWrapper').removeClass("hidden");
-
               showTopWin({
                 type: 1,
                 shade: 0.4,
                 title: '导出Excel文件',
                 maxmin: true,
                 area: ['550px', '185px'],
-                content: $('#exportWrapper'),
+                content: '<div id="exportWrapper" class="modal-body">\n'
+                + '  <div class="row">\n'
+                + '    <div class="col-xs-12">\n'
+                + '      <div class="progress active">\n'
+                + '        <div id="progressbar" class="progress-bar progress-bar-primary progress-bar-striped"\n'
+                + '             role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"\n'
+                + '             style="width: 100%;">\n'
+                + '          <span class="sr-only">0% Complete (success)</span>\n'
+                + '        </div>\n'
+                + '      </div>\n'
+                + '    </div>\n'
+                + '  </div>\n'
+                + '  <div class="row export-running">\n'
+                + '    <div class="col-xs-12">\n'
+                + '      正在执行数据导出任务\n'
+                + '    </div>\n'
+                + '  </div>\n'
+                + '  <div class="row export-result hidden">\n'
+                + '    <div class="col-xs-12">\n'
+                + '      <span id="downloadUrl">Excel文件已经导出，<a target="_blank" class="btn btn-primary"><i\n'
+                + '          class="fa fa-download"></i>点击下载文件</a></span>\n'
+                + '    </div>\n'
+                + '  </div>\n'
+                + '</div>',
                 zIndex: layer.zIndex, //重点1
                 end: function () {
                   //清除定时操作
-                  clearTimeout(myVar);
-                  $('#exportWrapper').addClass("hidden");
-                  $('.export-result').addClass("hidden");
-                  $('.export-running').removeClass("hidden");
-                  $('#downloadUrl .btn').attr('href', '');
+                  clearInterval(myVar);
+//                  $('#exportWrapper').addClass("hidden");
+//                  $('.export-result').addClass("hidden");
+//                  $('.export-running').removeClass("hidden");
+//                  $('#downloadUrl .btn').attr('href', '');
                 }
               });
+
+              myVar = setInterval(function () {
+                ajaxRequest(getServUrl("/report/fetch"), "GET",
+                    {fileUuid: r.value}, function (result) {
+                      if (result.success && result.value != null) {
+                        console.log(JSON.stringify(result));
+                        //清除定时操作
+//                        $('#exportWrapper .export-result').removeClass("hidden");
+//                        $('#exportWrapper .export-running').addClass("hidden");
+//                        $('#exportWrapper .btn').attr('href', result.value);
+                        $(window.parent.document).find("#exportWrapper .export-result").removeClass("hidden");
+                        $(window.parent.document).find("#exportWrapper .export-running").addClass("hidden");
+                        $(window.parent.document).find("#exportWrapper .btn").attr('href', result.value);
+                        clearInterval(myVar);
+                      }
+                    }, false);
+              }, 2000);
             }
           }, false, "application/json;charset=UTF-8");
     },
@@ -176,7 +202,7 @@
     {checkbox: true}
     /*,{field: "id", title: "编号", width: 110, sort:true}*/
     , {field: "csVinText", title: "车辆VIN码", width: 180, sort: true}
-    , {field: "csNumberText", title: "车机号", width: 110, sort: true}
+    , {field: "csNumberText", title: "车机号", width: 160, sort: true}
     , {field: "monthlyAvgMile", title: "月均行驶里程(KM)", width: 110, sort: true}
     , {field: "avgDriveTimePerDay", title: "平均单日运行时间", width: 110, sort: true}
     , {field: "powerConsumePerHundred", title: "百公里耗电量", width: 110, sort: true}
