fix bug ，国标状态数据

--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/index_list2.html
@@ -394,7 +394,7 @@
                               } else {
                                   option.where = $.extend(option.where, getFormData(operate.getQueryForm()));
                               }
-                              table.reload(tableId, transferParamsWithSort(params, "csvId"));
+                              table.reload(tableId, transferParamsWithSort(option, "csvId"));
                           },
 							getSelectIds:function(){
 								var ids = [];
