--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/insertBatchReport.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicleLimited/insertBatchReport.html
@@ -22,7 +22,7 @@
 	</head>
 <body >
 	<div class="form_content">
-		<a  href="http://oss-vc.oss-cn-hangzhou.aliyuncs.com/Template/excelTemplate.xls">条件模板下载（外）</a>
+		<a  href="http://oss-vc.oss-cn-hangzhou.aliyuncs.com/Template/csVehicleTemplate.xlsx">条件模板下载</a>
 		<br/>
 		<br/>
 		<form  class="form-horizontal" id="addform" style="margin:15px;" enctype="multipart/form-data" >
