--- a/vc-web/vc-web-front/src/main/resources/static/login_v2.html
+++ b/vc-web/vc-web-front/src/main/resources/static/login_v2.html
@@ -34,8 +34,8 @@
         <form>
           <h4 class="no-margins">登录：</h4>
           <p class="m-t-md">登录到车辆监控后台</p>
-          <input type="text" id="username" class="form-control uname" placeholder="用户名" value="admin"/>
-          <input type="password" id="password" class="form-control pword m-b" placeholder="密码"  value="a1234567"/>
+          <input type="text" id="username" class="form-control uname" placeholder="用户名"/>
+          <input type="password" id="password" class="form-control pword m-b" placeholder="密码"/>
           <button type="button" id="login" class="btn btn-success btn-block">登录</button>
         </form>
       </div>
