--- a/vc-web/vc-web-front/src/main/resources/static/index.html
+++ b/vc-web/vc-web-front/src/main/resources/static/index.html
@@ -38,9 +38,9 @@
         <div class="sidebar-collapse">
             <ul class="nav leftnav" id="side-menu">
                 <!-- 加载菜单 -->
-                <li class="img-box">
+                <!--<li class="img-box">
                     <span style="color: #fff;font-size: x-large">车机中心</span>
-                </li>
+                </li>-->
 
                 <!--<li>
                     <a href="#">
