--- a/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/insertBatchReport.html
+++ b/vc-web/vc-web-front/src/main/resources/public/admin/vehicle/insertBatchReport.html
@@ -87,6 +87,14 @@
 					</dd>
 				</dl>
 
+				<dl  >
+					<dt>接入商</dt>
+					<dd>
+						<input name="csvAccess" placeholder="" class="form-control searchinput" dataWhere="" dataUrl="/base/access/query">
+						<label id="csvAccess-error" class="error" for="csvAccess"><i class="fa fa-info-circle fieldTip">必填</i></label>
+					</dd>
+				</dl>
+
 			</div>
 
 
